wtrzykiwanie dwoch bledow

--- a/BergerTests/BergerTests.csproj
+++ b/BergerTests/BergerTests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BergerAlgorithm\BergerAlgorithm.csproj" />
+    <ProjectReference Include="..\BergerBackend\BergerBackend.csproj" />
   </ItemGroup>
 
 </Project>
