--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Addresses.cs" />
+    <Compile Include="BitHelper.cs" />
     <Compile Include="Server.cs">
       <SubType>Form</SubType>
     </Compile>
